# kestrel-labs

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
agents/: .env.example  package.json  tsconfig.json
agents/scripts/: close-expired-markets.ts  fund-agents.ts  withdraw-demo.ts
agents/src/: market_ops.ts  risk_lp.ts  trader.ts
agents/src/common/: tx.ts  (+9 more)
app/: instrumentation.ts  next.config.ts  package.json
app/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
app/config/: siteConfig.ts
app/lib/: font.ts  format.ts  oraclePrice.ts  showDevNav.ts  types.ts
app/supabase/: config.toml
programs/kestrel/: Cargo.toml
programs/kestrel/src/: constants.rs  error.rs  events.rs  lib.rs
programs/kestrel/src/instructions/: cancel_bet.rs  close_market.rs  close_position.rs  commit_and_undelegate_agent.rs  commit_and_undelegate_market.rs  commit_market.rs  create_market.rs  delegate_agent.rs  delegate_market.rs  deposit.rs  halt_market.rs  init_config.rs  migrate_config.rs  mod.rs  open_market.rs  place_bet.rs  register_agent.rs  settle_position.rs  settle_positions.rs  update_policy.rs  withdraw.rs
programs/kestrel/src/state/: agent.rs  config.rs  market.rs  mod.rs  oracle.rs
scheduler/: .env.example  package.json  tsconfig.json
scheduler/scripts/: init-config.ts
scheduler/src/: config.ts  connections.ts  index.ts  log.ts  loop.ts  marketDb.ts  state.ts
scripts/: anchor-build.mjs  ensure-idl.mjs  sync-idl-to-app.mjs  sync-idl.mjs
tests/: kestrel.ts
(+59 files in other folders)
